@@ -51,9 +51,10 @@ Trunk (unreleased changes)
     HADOOP-2139 (phase 2) Make region server more event driven
     HADOOP-2289 Useless efforts of looking for the non-existant table in select
                 command.
-    HADOOP-2262 HADOOP-2261 fail fast on non-existing table, change abort to
-                function after commit even if commit was successful
     HADOOP-2257 Show a total of all requests and regions on the web ui
+    HADOOP-2261 HTable.abort no longer throws exception if there is no active update.
+    HADOOP-2287 Make hbase unit tests take less time to complete.
+    HADOOP-2262 Retry n times instead of n**2 times.
 
 Release 0.15.1
 Branch 0.15
